[gd_scene load_steps=3 format=3 uid="uid://ha13x2giomo1"]

[ext_resource type="Texture2D" uid="uid://c8aopobx6gr3u" path="res://Opciones/Menú principal/Titulo_1.1.2.png" id="1_gqs2b"]
[ext_resource type="Script" uid="uid://bcnuj8vkd0me6" path="res://Opciones/Menú principal/menú_principal.gd" id="1_qd1eu"]

[node name="MenúPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qd1eu")

[node name="Titulo1_1_2" type="Sprite2D" parent="."]
position = Vector2(574, 400)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_gqs2b")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 307.0
offset_top = -401.0
offset_right = -303.0
offset_bottom = -125.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Jugar" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "JUGAR"

[node name="Misiones" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "MISIONES"

[node name="Tienda" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TIENDA"

[node name="Personalizar" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PERSONALIZAR
"

[node name="Tutorial" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "TUTORIAL"

[node name="Opciones" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "OPCIONES"

[node name="Créditos" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "CRÉDITOS"

[node name="Salir" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "SALIR"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
